[FSDE-17382] Change vertical align fix approach

--- a/src/chi/components/carousel/carousel.scss
+++ b/src/chi/components/carousel/carousel.scss
@@ -49,6 +49,24 @@
     }
   }
 
+  &-dots {
+    .chi-carousel__control {
+      &.-next,
+      &.-previous {
+        height: $carousel-controller-height-dots;
+      }
+    }
+  }
+
+  &-pagination {
+    .chi-carousel__control {
+      &.-next,
+      &.-previous {
+        height: $carousel-controller-height-pagination;
+      }
+    }
+  }
+
   &__dots {
     display: flex;
     justify-content: center;
