--- a/src/chi/themes/brightspeed/_variables.scss
+++ b/src/chi/themes/brightspeed/_variables.scss
@@ -779,6 +779,8 @@ $carousel-dot-border-color:                 $color-border-black;
 $carousel-dot-hover-background-color:       $color-background-black;
 $carousel-dot-active-background-color:      $color-background-black;
 $carousel-dot-size:                         $icon-size-xs;
+$carousel-controller-height-dots:           calc(100% - #{$icon-size-xs});
+$carousel-controller-height-pagination:     calc(100% - #{$icon-size-sm2});
 
 // Checkbox
 $checkbox-background-color:                 $color-background-white;
